Add sunpy net to reqs

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ zip_safe = False
 packages = find:
 install_requires =
     astropy
-    sunpy
+    sunpy[net]
     reproject
 
 [options.extras_require]
