Get tests working

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,14 +11,21 @@ license = BSD 2-Clause
 zip_safe = False
 packages = find:
 install_requires =
-    astropy
-    sunpy[net]
-    reproject
+  astropy
+  sunpy[map,net]>=3.1
+  reproject
 
 [options.extras_require]
 docs =
-    sphinx
-    sphinx-automodapi
-    numpydoc
-    sphinx-rtd-theme
-    sphinx-gallery
+  sphinx
+  sphinx-automodapi
+  numpydoc
+  sphinx-rtd-theme
+  sphinx-gallery
+test =
+  pytest
+  pytest-cov
+
+[tool:pytest]
+testpaths = "solarsynoptic"
+addopts = --cov=solarsynoptic/
