Add pre-commit config

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,14 @@ test =
 [tool:pytest]
 testpaths = "solarsynoptic"
 addopts = --cov=solarsynoptic/
+
+[isort]
+balanced_wrapping = True
+default_section = THIRDPARTY
+include_trailing_comma = True
+known_first_party = solarsynoptic
+length_sort = False
+line_length = 80
+multi_line_output = 3
+no_lines_before = LOCALFOLDER
+sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
